--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Оплата товара</title>
   <link rel="stylesheet" href="/styles.css" />
+  <link rel="icon" type="image/png" href="./images/icon.png">
 </head>
 <body>
   <div class="form-container">
@@ -55,4 +56,3 @@
   </div>
 </body>
 </html>
-
