--- a/views/success.html
+++ b/views/success.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Оплата успешна</title>
   <link rel="stylesheet" href="/styles.css" />
+  <link rel="icon" type="image/png" href="./images/icon.png">
 </head>
 <body>
   <div class="success-container">
